force-app/main/default/objects/CampaignMember/fields/RTL_NumClosedLostOpportunities__c.field-meta.xml
<CustomField>
    <fullName>RTL_NumClosedLostOpportunities__c</fullName>
    <formula>IF( AND(RTL_RelatedOpportunity_1__c != null, RTL_RelatedOpportunity_1__r.IsClosed, NOT(RTL_RelatedOpportunity_1__r.IsWon)), 1,0) + 
IF( AND(RTL_RelatedOpportunity_2__c != null, RTL_RelatedOpportunity_2__r.IsClosed, NOT(RTL_RelatedOpportunity_2__r.IsWon)), 1,0) + 
IF( AND(RTL_RelatedOpportunity_3__c != null, RTL_RelatedOpportunity_3__r.IsClosed, NOT(RTL_RelatedOpportunity_3__r.IsWon)), 1,0) + 
IF( AND(RTL_RelatedOpportunity_4__c != null, RTL_RelatedOpportunity_4__r.IsClosed, NOT(RTL_RelatedOpportunity_4__r.IsWon)), 1,0) + 
IF( AND(RTL_RelatedOpportunity_5__c != null, RTL_RelatedOpportunity_5__r.IsClosed, NOT(RTL_RelatedOpportunity_5__r.IsWon)), 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num Closed Lost Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>