force-app/main/default/objects/CampaignMember/fields/RTL_NumMember__c.field-meta.xml
<CustomField>
    <fullName>RTL_NumMember__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num Member</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>