force-app/main/default/objects/CampaignMember/fields/RTL_Offer_Result__c.field-meta.xml
<CustomField>
    <fullName>RTL_Offer_Result__c</fullName>
    <formula>IF (TEXT(RTL_Contact_Status__c) = &apos;New&apos;, 
$Label.RTL_Campaign_Member_Filter_Offer_Pending, 
  IF( OR( TEXT(RTL_Contact_Status__c) = &apos;Unused&apos;, 
          TEXT(RTL_Contact_Status__c) = &apos;Close&apos;,
          RTL_Count_Offer_Product__c  = 0),
    &apos;N/A&apos;,
    IF( RTL_Count_Interest__c+RTL_Count_Not_Interest__c+RTL_Count_NA__c+RTL_Count_Referred__c &lt; RTL_Count_Offer_Product__c ,
        $Label.RTL_Campaign_Member_Filter_Offer_Pending ,
             IF( RTL_Count_Interest__c&gt;0 ,
             $Label.RTL_Campaign_Member_Filter_Offer_Interest,
             IF( RTL_Count_Referred__c&gt;0 ,
             $Label.RTL_Campaign_Member_Filter_Offer_Referred,
                IF( RTL_Count_Not_Interest__c &gt;0,
                $Label.RTL_Campaign_Member_Filter_Offer_NotInterest,
                &apos;N/A&apos;
                )
             )
           )
    )
  )
)</formula>
    <label>Offer Result</label>
    <type>Text</type>
</CustomField>