force-app/main/default/objects/CampaignMember/fields/RTL_Offer_Result_CC__c.field-meta.xml
<CustomField>
    <fullName>RTL_Offer_Result_CC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offer Result CC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>