force-app/main/default/objects/CampaignMember/fields/RTL_OfferResult_Product_2__c.field-meta.xml
<CustomField>
    <fullName>RTL_OfferResult_Product_2__c</fullName>
    <label>Offer Result for Product-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RTL_OfferResultPRD</valueSetName>
    </valueSet>
</CustomField>