force-app/main/default/objects/CampaignMember/fields/RTL_Opportunity_Amount_5__c.field-meta.xml
<CustomField>
    <fullName>RTL_Opportunity_Amount_5__c</fullName>
    <label>Opportunity Amount 5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>