force-app/main/default/objects/CampaignMember/fields/RTL_Opportunity_CloseDate_5__c.field-meta.xml
<CustomField>
    <fullName>RTL_Opportunity_CloseDate_5__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Expected Date 5</label>
    <type>Date</type>
</CustomField>