force-app/main/default/objects/CampaignMember/fields/RTL_Opportunity_ID_3__c.field-meta.xml
<CustomField>
    <fullName>RTL_Opportunity_ID_3__c</fullName>
    <formula>RTL_RelatedOpportunity_3__r.Id</formula>
    <label>Opportunity ID-3</label>
    <type>Text</type>
</CustomField>