force-app/main/default/objects/CampaignMember/fields/RTL_Opportunity_Stage_3__c.field-meta.xml
<CustomField>
    <fullName>RTL_Opportunity_Stage_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Stage 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>