force-app/main/default/objects/CampaignMember/fields/RTL_Opportunity_Status_2__c.field-meta.xml
<CustomField>
    <fullName>RTL_Opportunity_Status_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Status 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>