force-app/main/default/objects/CampaignMember/fields/RTL_Partner_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Partner_Branch_Code__c</fullName>
    <description>รหัสสาขาที่รับผิดชอบของ Partner</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Branch Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>