force-app/main/default/objects/CampaignMember/fields/RTL_PDPA__c.field-meta.xml
<CustomField>
    <fullName>RTL_PDPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDPA</label>
    <type>Checkbox</type>
</CustomField>