force-app/main/default/objects/CampaignMember/fields/RTL_Product_Feature__c.field-meta.xml
<CustomField>
    <fullName>RTL_Product_Feature__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Feature</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>