force-app/main/default/objects/CampaignMember/fields/RTL_Product_Group_2__c.field-meta.xml
<CustomField>
    <fullName>RTL_Product_Group_2__c</fullName>
    <label>Product Group 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BANCASSURANCE</fullName>
                <label>Bancassurance</label>
            </value>
            <value>
                <fullName>CREDIT CARD &amp; RDC</fullName>
                <label>Credit Card &amp; RDC</label>
            </value>
            <value>
                <fullName>DEPOSIT</fullName>
                <label>Deposit</label>
            </value>
            <value>
                <fullName>INVESTMENT</fullName>
                <label>Investment</label>
            </value>
            <value>
                <fullName>LOAN</fullName>
                <label>Loan</label>
            </value>
            <value>
                <fullName>OTHERS</fullName>
                <label>Others</label>
            </value>
            <value>
                <fullName>AUTO LOAN</fullName>
                <label>Auto Loan</label>
            </value>
            <value>
                <fullName>LOAN RETENTION</fullName>
                <isActive>false</isActive>
                <label>LOAN RETENTION</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>