force-app/main/default/objects/CampaignMember/fields/RTL_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>RTL_Product_Group__c</fullName>
    <formula>IF ( TEXT(RTL_Product_Group_2__c) &lt;&gt; &apos;&apos;, &apos;MULTIPLE PRODUCTS&apos;, TEXT(RTL_Product_Group_1__c))</formula>
    <label>Product Group</label>
    <type>Text</type>
</CustomField>