force-app/main/default/objects/CampaignMember/fields/RTL_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Product_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>