force-app/main/default/objects/CampaignMember/fields/RTL_Products_Offer_String__c.field-meta.xml
<CustomField>
    <fullName>RTL_Products_Offer_String__c</fullName>
    <description>Temp field to store product offer string before processing by trigger</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Products Offer String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>