force-app/main/default/objects/CampaignMember/fields/RTL_Promotion__c.field-meta.xml
<CustomField>
    <fullName>RTL_Promotion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Promotion</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>