force-app/main/default/objects/CampaignMember/fields/RTL_Reason_1__c.field-meta.xml
<CustomField>
    <fullName>RTL_Reason_1__c</fullName>
    <label>Reason of Not Interested-1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RTL_Product_Group_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>RTL_Reason_NotInterested</valueSetName>
    </valueSet>
</CustomField>