force-app/main/default/objects/CampaignMember/fields/RTL_Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>RTL_Reason_Lost__c</fullName>
    <description>เหตุผลที่ไม่สามารถปิดการขาย</description>
    <encryptionScheme>None</encryptionScheme>
    <label>reason_desc</label>
    <length>200</length>
    <type>Text</type>
</CustomField>