force-app/main/default/objects/CampaignMember/fields/RTL_Referral_ID_2__c.field-meta.xml
<CustomField>
    <fullName>RTL_Referral_ID_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Referral</label>
    <referenceTo>RTL_Referral__c</referenceTo>
    <relationshipLabel>Campaign Members (Related Referral)</relationshipLabel>
    <relationshipName>Campaign_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>