force-app/main/default/objects/CampaignMember/fields/RTL_Register_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_Register_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Register Date</label>
    <type>Date</type>
</CustomField>