force-app/main/default/objects/CampaignMember/fields/RTL_RelatedOpportunity_1__c.field-meta.xml
<CustomField>
    <fullName>RTL_RelatedOpportunity_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Opportunity-1</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>