force-app/main/default/objects/CampaignMember/fields/RTL_RelatedOpportunity_2__c.field-meta.xml
<CustomField>
    <fullName>RTL_RelatedOpportunity_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Opportunity-2</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Campaign Members (Related to Opportunity-2)</relationshipLabel>
    <relationshipName>Campaign_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>