force-app/main/default/objects/CampaignMember/fields/RTL_RelatedOpportunity_3__c.field-meta.xml
<CustomField>
    <fullName>RTL_RelatedOpportunity_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Opportunity-3</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Campaign Members (Related to Opportunity-3)</relationshipLabel>
    <relationshipName>Campaign_Members2</relationshipName>
    <type>Lookup</type>
</CustomField>