force-app/main/default/objects/CampaignMember/fields/RTL_Remark__c.field-meta.xml
<CustomField>
    <fullName>RTL_Remark__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remark</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>