force-app/main/default/objects/CampaignMember/fields/RTL_Request_Hub_Name_1__c.field-meta.xml
<CustomField>
    <fullName>RTL_Request_Hub_Name_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Hub/Zone/Team Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>