force-app/main/default/objects/CampaignMember/fields/RTL_Result_Business__c.field-meta.xml
<CustomField>
    <fullName>RTL_Result_Business__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Result Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>