force-app/main/default/objects/CampaignMember/fields/RTL_Retry_Info__c.field-meta.xml
<CustomField>
    <fullName>RTL_Retry_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Retry Info</label>
    <length>20</length>
    <type>Text</type>
</CustomField>