force-app/main/default/objects/CampaignMember/fields/RTL_Segment__c.field-meta.xml
<CustomField>
    <fullName>RTL_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>