force-app/main/default/objects/CampaignMember/fields/RTL_Source_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>RTL_Source_ZipCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source ZipCode</label>
    <length>200</length>
    <type>Text</type>
</CustomField>