force-app/main/default/objects/CampaignMember/fields/RTL_Stage__c.field-meta.xml
<CustomField>
    <fullName>RTL_Stage__c</fullName>
    <label>RTL_Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>