force-app/main/default/objects/CampaignMember/fields/RTL_Stage_Name_Date_Time_1__c.field-meta.xml
<CustomField>
    <fullName>RTL_Stage_Name_Date_Time_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stage Name Date Time</label>
    <type>DateTime</type>
</CustomField>