force-app/main/default/objects/CampaignMember/fields/RTL_Status_2__c.field-meta.xml
<CustomField>
    <fullName>RTL_Status_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>