force-app/main/default/objects/CampaignMember/fields/RTL_Sub_Group_2__c.field-meta.xml
<CustomField>
    <fullName>RTL_Sub_Group_2__c</fullName>
    <label>Sub Group 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RTL_Product_Group_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LIFE</fullName>
                <label>Life</label>
            </value>
            <value>
                <fullName>NON LIFE</fullName>
                <label>Non Life</label>
            </value>
            <value>
                <fullName>CREDIT CARDS</fullName>
                <label>Credit Cards</label>
            </value>
            <value>
                <fullName>RDC</fullName>
            </value>
            <value>
                <fullName>NON TRANSACTIONAL</fullName>
            </value>
            <value>
                <fullName>TRANSACTIONAL</fullName>
            </value>
            <value>
                <fullName>MM</fullName>
            </value>
            <value>
                <fullName>NON MM</fullName>
            </value>
            <value>
                <fullName>PERSONAL LOAN</fullName>
                <label>Personal Loan</label>
            </value>
            <value>
                <fullName>SECURED LOAN</fullName>
                <label>Secured Loan</label>
            </value>
            <value>
                <fullName>HOME LOAN</fullName>
                <label>Home Loan</label>
            </value>
            <value>
                <fullName>COMBO</fullName>
                <label>Combo</label>
            </value>
            <value>
                <fullName>COMMERCIAL PRODUCTS</fullName>
                <label>Commercial products</label>
            </value>
            <value>
                <fullName>UP-SELLING</fullName>
                <label>Up-selling</label>
            </value>
            <value>
                <fullName>OTHERS</fullName>
                <label>Others</label>
            </value>
            <value>
                <fullName>LOAN</fullName>
                <label>Loan</label>
            </value>
            <value>
                <fullName>LIFE INSURANCE</fullName>
                <label>Life Insurance</label>
            </value>
            <value>
                <fullName>NON LIFE INSURANCE</fullName>
            </value>
            <value>
                <fullName>INVESTMENT</fullName>
            </value>
            <value>
                <fullName>MIXED</fullName>
            </value>
            <value>
                <fullName>BOND</fullName>
            </value>
            <value>
                <fullName>TMB VISA SIGNATURE</fullName>
            </value>
            <value>
                <fullName>SO SMART</fullName>
            </value>
            <value>
                <fullName>SO FAST</fullName>
            </value>
            <value>
                <fullName>SO CHILL</fullName>
            </value>
            <value>
                <fullName>TOP BRASS</fullName>
            </value>
            <value>
                <fullName>WEALTH</fullName>
            </value>
            <value>
                <fullName>HOME EQUITY</fullName>
            </value>
            <value>
                <fullName>TMB ABSOLUTE VISA SIGNATURE</fullName>
            </value>
            <value>
                <fullName>TMB SO CHILL</fullName>
                <label>TMB So Chill</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>